# Sommateur

./: CMakeLists.txt  README.md  sommateur.cpp
.github/workflows/: cmake-multi-platform.yml
